--- a/AircraftWeb/Components/Pages/ReadAircraft.razor
+++ b/AircraftWeb/Components/Pages/ReadAircraft.razor
@@ -6,7 +6,7 @@
 
 <h3 class="text-center mt-4">Aircraft List</h3>
 
-@if (!_aircrafts.Any())
+@if (!_aircraft!.Any())
 {
     <div class="alert alert-warning text-center" role="alert">
         No aircrafts found.
@@ -26,7 +26,7 @@ else
             </tr>
             </thead>
             <tbody>
-            @foreach (var aircraft in _aircrafts)
+            @foreach (var aircraft in _aircraft!)
             {
                 <tr>
                     <td>@aircraft.AircraftId</td>
@@ -43,10 +43,10 @@ else
 
 
 @code {
-    private List<Aircraft>? _aircrafts;
+    private List<Aircraft>? _aircraft;
 
     protected override async Task OnInitializedAsync()
     {
-        _aircrafts = await AircraftRepository.ReadAllAsync();
+        _aircraft = await AircraftRepository.ReadAllAsync();
     }
 }
