--- a/AircraftWeb/Components/Pages/AircraftCrew.razor
+++ b/AircraftWeb/Components/Pages/AircraftCrew.razor
@@ -1,8 +1,9 @@
-﻿@page "/ReadAircraft"
+﻿@page "/AircraftCrew"
 @using Database.Entities
 @using Repository.Interfaces
-@using Repository.SpecifiedRepositories
 @inject IRepository<Aircraft> AircraftRepository
+
+<h3>AircraftCrew</h3>
 
 <h3 class="text-center mt-4">Aircraft List</h3>
 
